--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	</div>
 </div>
 <div id="footer">
-	Reference: Wikipedia
+	Reference: <a id="referenceLink" href="https://en.wikipedia.org/wiki/Gettysburg_Address">Wikipedia</a>
 </div>
 
 
